--- a/src/view/form/layout/layout.module.css
+++ b/src/view/form/layout/layout.module.css
@@ -26,6 +26,9 @@
 /**/
 .main {
     display: flex;
+    height: calc(100vh - 40px);
+    box-sizing: border-box;
+    overflow: hidden;
 }
 
 /**/
@@ -45,4 +48,36 @@
 
 .CheckCardItem {
     margin-right: 0;
+}
+
+/**/
+.right {
+    width: 300px;
+    height: calc(100vh - 40px);
+    box-sizing: border-box;
+    padding: 10px;
+    overflow: auto;
+    border-left: 1px solid #ddd;
+}
+
+/**/
+.middle {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1; /* 填充剩余宽度 */
+}
+
+/**/
+.midTop {
+    height: 50%;
+    padding: 10px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #ddd;
+}
+
+/**/
+.midBottom {
+    height: 50%;
+    padding: 10px;
+    box-sizing: border-box;
 }
