--- a/src/view/form/layout/layout.module.css
+++ b/src/view/form/layout/layout.module.css
@@ -6,21 +6,42 @@
     box-sizing: border-box;
 }
 
+.flex {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.icon {
+    padding: 5px;
+    border-radius: 4px;
+}
+
+.icon:hover {
+    background: #f0f0f0;
+}
+
 /**/
 .header {
     width: 100%;
     height: 40px;
-    padding: 0 10px;
+    padding: 0 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--border);
 }
 
 .title {
     font-size: 16px;
     font-weight: bold;
+    /*斜纹栅栏渐变*/
+    background: repeating-linear-gradient(-45deg, var(--geekblue-5), var(--geekblue-5) 10px, var(--geekblue-3) 10px, var(--geekblue-3) 20px
+    );
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 /**/
@@ -38,7 +59,7 @@
     height: calc(100vh - 40px);
     padding: 10px;
     overflow: auto;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid var(--border);
 }
 
 .CheckCardGroup {
@@ -57,7 +78,7 @@
     box-sizing: border-box;
     padding: 10px;
     overflow: auto;
-    border-left: 1px solid #ddd;
+    border-left: 1px solid var(--border);
 }
 
 /**/
@@ -72,7 +93,7 @@
     height: 50%;
     padding: 10px;
     box-sizing: border-box;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid var(--border);
 }
 
 /**/
