--- a/src/view/home/style/layout.module.css
+++ b/src/view/home/style/layout.module.css
@@ -14,7 +14,9 @@
 }
 
 .icon {
-    padding: 5px;
+    font-size: 20px;
+    padding: 4px;
+    border: 1px solid var(--border);
     border-radius: 4px;
 }
 
@@ -25,7 +27,7 @@
 /**/
 .header {
     width: 100%;
-    height: 40px;
+    height: 50px;
     padding: 0 20px;
     overflow: hidden;
     display: flex;
@@ -34,7 +36,15 @@
     border-bottom: 1px solid var(--border);
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+}
+
 .title {
+    height: 50px;
+    line-height: 50px;
+    margin-left: 10px;
     font-size: 16px;
     font-weight: bold;
     color: var(--geekblue);
