--- a/src/view/form/style/layout.module.css
+++ b/src/view/form/style/layout.module.css
@@ -25,7 +25,7 @@
 /**/
 .header {
     width: 100%;
-    height: 40px;
+    height: 50px;
     padding: 0 20px;
     overflow: hidden;
     display: flex;
@@ -34,7 +34,15 @@
     border-bottom: 1px solid var(--border);
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+}
+
 .title {
+    height: 50px;
+    line-height: 50px;
+    margin-left: 10px;
     font-size: 16px;
     font-weight: bold;
     color: var(--geekblue);
@@ -43,7 +51,7 @@
 /**/
 .main {
     display: flex;
-    height: calc(100vh - 40px);
+    height: calc(100vh - 50px);
     box-sizing: border-box;
     overflow: hidden;
 }
