--- a/src/component/layout/header.module.css
+++ b/src/component/layout/header.module.css
@@ -1,11 +1,3 @@
-/**/
-.container {
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-    box-sizing: border-box;
-}
-
 .flex {
     width: 100%;
     display: flex;
@@ -13,27 +5,16 @@
     justify-content: space-between;
 }
 
-.icon {
-    font-size: 20px;
-    padding: 4px;
-    border: 1px solid var(--border);
-    border-radius: 4px;
-}
-
-.icon:hover {
-    background: #f0f0f0;
-}
-
 /**/
 .header {
     width: 100%;
-    height: 50px;
+    height: var(--header-height);
     padding: 0 20px;
     overflow: hidden;
     display: flex;
     align-items: center;
     box-sizing: border-box;
-    border-bottom: 1px solid var(--border);
+    border-bottom: var(--border-gray);
 }
 
 .logo {
@@ -42,11 +23,31 @@
 }
 
 .title {
-    height: 50px;
-    line-height: 50px;
+    height: var(--header-height);
+    line-height: var(--header-height);
     margin-left: 10px;
     font-size: 16px;
     font-weight: bold;
     color: var(--geekblue);
 }
 
+.icon-box {
+    display: flex;
+}
+
+.icon + .icon {
+    margin-left: 10px;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    padding: 4px;
+    border: var(--border-gray);
+    border-radius: 4px;
+}
+
+.icon:hover {
+    background: #f0f0f0;
+    cursor: pointer;
+}
